# pdf_to_image

./: .env.example  .gitignore  .pre-commit-config.yaml  .ruff.toml  README.MD  docker-compose.yaml
backend/: poe.toml  pyproject.toml
backend/docker/: Dockerfile
backend/src/: app.py  config.py  dependencies.py  main.py
backend/src/db/: database.py
backend/src/models/db/: pdf_document.py
backend/src/models/pydantic/: request_model.py  response_model.py
backend/src/repositories/: pdf_repository.py
backend/src/routers/: chat_with_llm_router.py  pdf_router.py
backend/src/services/: chat_with_llm_service.py  pdf_service.py
backend/src/utils/: blob_storage.py  convert_pdf_to_image.py
backend/tests/: test_app.py
frontend/: poe.toml  pyproject.toml
frontend/docker/: dockerfile
frontend/src/: app.py  config.py
frontend/src/api/: fe_api_pdf.py
frontend/src/utils/: blob_storage.py
nginx/: default.conf.template
stress_test/: locust.py  pyproject.toml
